# BurnsBaramator

./: .bugs_tracker.md  .claude-context.md  .dockerignore  .env.example  .gitignore  .vercelignore  Dockerfile  README.md  SETUP.md  config.yaml  docker-compose.yml  fly.toml  koyeb.yaml  main.py  pyproject.toml  pytest.ini  requirements-vercel.txt  requirements.txt  strategic_narrative.yaml  vercel.json
agents/: barometer.py  gatekeeper.py  mirror.py  scout.py  tribunal.py
api/: index.py
db/: manager.py
docs/: 00_START_HERE.md  01_QUICK_REFERENCE.md  02_COMPLETE_GUIDE.md  03_DEPENDENCY_MANAGEMENT.md  04_AI_ASSISTANT_INTEGRATION.md  05_CLAUDE_CONTEXT_AND_BUGS.md  BURNS_BAROMETER_SPEC.md  BURNS_MASTER_RESUME_SOURCE.md  DEPLOYMENT.md
tests/: conftest.py  test_agents.py  test_db.py
utils/: llm_client.py
