[project]
name = "jobfinder"
version = "0.1.0"
description = "Burns Job Barometer"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=0.0.5",
    "openai>=1.10.0",
    "anthropic>=0.15.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.41.0",
    "html2text>=2024.2.26",
    "duckduckgo-search>=5.0.0",
    "aiosqlite>=0.19.0",
    "apscheduler>=3.10.0",
    "jinja2>=3.1.0",
    "markdown>=3.5.0",
    "weasyprint>=60.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=agents --cov=db --cov=utils"
